# argus

./: Cargo.toml  README.md
src/: app.rs  crossterm.rs  global_key_handler.rs  global_state.rs  key_handler.rs  main.rs  ui.rs
src/components/modal/: ui.rs
src/global/: key_handler.rs  mod.rs  state.rs  ui.rs
src/rpcs/: evm.rs  mod.rs
src/screens/: mod.rs
src/screens/blocks/: app.rs  keys.rs  mod.rs  ui.rs
src/screens/custom_rpc/: keys.rs  ui.rs
src/screens/list_rpcs/: keys.rs  ui.rs
src/screens/search/: keys.rs  mod.rs  ui.rs
src/screens/transactions/: app.rs  keys.rs  ui.rs
