[package]
name = "web3xplore"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.20.1"
crossterm = "0.26"
argh = "0.1"
rand = "0.8"
clipboard_macos = "0.1.0"
reqwest = { version = "0.11.18", features = ["blocking", "json"] }
tokyo = "1.0.0"
json = "0.12.4"
serde_json = "1.0.96"
dotenv = "0.15.0"
